--- a/AUPSUP_HTML5_METASUPPLIER_M/webapp/view/MetasupplierContacts.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER_M/webapp/view/MetasupplierContacts.view.xml
@@ -31,7 +31,7 @@
 					<uxap:ObjectPageSection title="{mysettings>SectionTitle}">
 						<uxap:subSections templateShareable="true">
 							<uxap:ObjectPageSubSection title="">
-								<List items="{mysettings>Subsections}" headerText="" visible="{mysettings>Data}">
+								<List id="ListContains" items="{mysettings>Subsections}" headerText="" visible="{mysettings>Data}">
 									<headerToolbar>
 										<OverflowToolbar>
 											<ToolbarSpacer/>
