--- a/AUPSUP_HTML5_SEARCH_HU/webapp/view/App.view.xml
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/view/App.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="it.alteaup.supplier.portal.searchHU.AUPSUP_HTML5_SEARCH_HU.controller.App" xmlns:mvc="sap.ui.core.mvc"
+<mvc:View controllerName="it.aupsup.searchHU.AUPSUP_HTML5_SEARCH_HU.controller.App" xmlns:mvc="sap.ui.core.mvc"
 	displayBlock="true" xmlns="sap.m">
 	<App id="idAppControl"/> 
 </mvc:View> 
