--- a/AUPSUP_HTML5_METASUPPLIER/webapp/view/Metasuppliers.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/view/Metasuppliers.view.xml
@@ -81,13 +81,13 @@
 								</Column>
 								<Column minScreenWidth="Desktop" demandPopin="true">
 									<Text text="{i18n>BU}"/>
-								</Column>
+								</Column>							
 								<Column minScreenWidth="Desktop" demandPopin="true" hAlign="End"></Column>
 								<Column minScreenWidth="Desktop" demandPopin="true" hAlign="End"></Column>
 								<Column minScreenWidth="Desktop" demandPopin="true" hAlign="End"></Column>
 							</columns>
 							<items>
-								<ColumnListItem>
+								<ColumnListItem highlight="{= ${tableModelMetasuppliers>ATTIVO} === 0 ? 'Indication02' : 'Success' }">
 									<cells>
 										<!--<Text text="{tableModelMetasuppliers>LIFNR}"/>-->
 										<Text text="{tableModelMetasuppliers>RAG_SOCIALE}"/>
