--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
@@ -121,7 +121,7 @@
 													<m:Label text="{i18n>EBELP}" class="columnLabelStyle" wrapping="true"/>
 												</m:Column>
 												<m:Column minScreenWidth="Desktop" demandPopin="true">
-													<m:Label text="{i18n>ETENR}" class="columnLabelStyle" wrapping="true"/>
+													<m:Label text="{i18n>NUMINTCONF}" class="columnLabelStyle" wrapping="true"/>
 												</m:Column>
 												<m:Column minScreenWidth="Desktop" demandPopin="true">
 													<m:Label text="{i18n>EINDT}" class="columnLabelStyle" wrapping="true"/>
