--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/OrderPositionDetail.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="it.alteaup.supplier.portal.inboundDelivery.controller.OrderPositionDetail" xmlns:mvc="sap.ui.core.mvc"
+<mvc:View controllerName="it.aupsup.inboundDelivery.controller.OrderPositionDetail" xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" xmlns:table="sap.ui.table" xmlns:f="sap.f" xmlns:core="sap.ui.core"
 	xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form">
 	<m:Shell id="shell" appWidthLimited="false">
@@ -17,7 +17,7 @@
 					</m:customHeader>
 					<ObjectPageLayout id="ObjectPageLayout">
 						<headerContent>
-							<core:Fragment fragmentName="it.alteaup.supplier.portal.inboundDelivery.fragments.DatiPosizione" type="XML"/>
+							<core:Fragment fragmentName="it.aupsup.inboundDelivery.fragments.DatiPosizione" type="XML"/>
 						</headerContent>
 						<sections>
 							<ObjectPageSection title="{i18n>schedules}">
@@ -67,7 +67,7 @@
 														<m:Text text="{OrderPrositionJSONModel>EBELN}"/>
 														<m:Text text="{OrderPrositionJSONModel>EBELP}"/>
 														<m:Text text="{OrderPrositionJSONModel>ETENR}"/>
-														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.alteaup.supplier.portal.inboundDelivery.type.Date' }"/>
+														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.inboundDelivery.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
 														<m:Text text="{= ${OrderPrositionJSONModel>MENGE} - ${OrderPrositionJSONModel>WEMNG}}"/>
 														<m:Text text="{OrderPrositionJSONModel>WEMNG}"/>
@@ -120,7 +120,7 @@
 												<m:ColumnListItem>
 													<m:cells>
 														<m:Text text="{OrderPrositionJSONModel>ETENS}"/>
-														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.alteaup.supplier.portal.inboundDelivery.type.Date' }"/>
+														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.aupsup.inboundDelivery.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
 														<m:Text text="{OrderPrositionJSONModel>XBLNR}"/>														
 														<m:Text text="{OrderPrositionJSONModel>MENGE}"/>
