--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -127,6 +127,14 @@
 															<m:ToolbarSpacer/>
 															<m:Button visible="false" id="headerFilterButton" tooltip="{i18n>clearFilter}" icon="sap-icon://clear-filter" press="onClearFilter"
 																type="Transparent"/>
+															<m:HBox alignItems="Center" id="comboProfiliConferma">
+																<m:Label text="{i18n>CAT_CONS}" class="labelSpace"/>
+																<m:ComboBox selectedKey="{ListProfiliConfermaJSONModel>/CAT_CONFERMA}" width="auto" change="onChangeProfiloConsegna"
+																	items="{ path: 'ListProfiliConfermaJSONModel>/results', sorter: { path: 'CAT_CONFERMA' } }">
+																	<core:Item key="{ListProfiliConfermaJSONModel>CAT_CONFERMA}"
+																		text="{ListProfiliConfermaJSONModel>CAT_CONFERMA} - {ListProfiliConfermaJSONModel>DESCRIZIONE}"/>
+																</m:ComboBox>
+															</m:HBox>																	
 															<m:Button icon="sap-icon://excel-attachment" press="onExport" tooltip="{i18n>Export_Excel}"/>
 															<m:Button icon="sap-icon://vertical-grip" visible="true" press="onColumnSelection" tooltip="{i18n>personalization}"/>
 														</m:content>
@@ -181,7 +189,7 @@
 													</m:Column>
 												</m:columns>
 												<m:items>
-													<m:ColumnListItem type="Navigation" highlight="{path:'OrderJSONModel>Status'}">
+													<m:ColumnListItem type="Navigation" highlight="{path:'OrderJSONModel>STATUS', formatter:'.onSetSchedulationStatus'}">
 														<m:cells>
 															<m:CheckBox selected="{OrderJSONModel>isSelected}" editable= "{= ${OrderJSONModel>SKIP_NO_CONFERME} !== true}"/>
 															<m:Text text="{OrderJSONModel>EBELN}"/>
