--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/view/OrderPositionDetail.view.xml
@@ -27,6 +27,8 @@
 									<!--Codice Materiale usato dal fornitore-->
 									<m:ObjectAttribute title="{i18n>MENGE}" text="{ path: 'OrderPrositionJSONModel>/MENGE', formatter : '.importFormatter'}"/>
 									<!--Quantità-->
+									<m:ObjectAttribute title="{i18n>NETPR}" text="{ path: 'OrderPrositionJSONModel>/NETPR', formatter : '.importFormatter' }"/>
+									<!--prezzo-->										
 									<m:ObjectAttribute title="{i18n>PEINH}" text="{ path: 'OrderPrositionJSONModel>/PEINH' }"/>
 									<!--Unità di prezzo-->
 								</m:VBox >
