--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/Worklist.view.xml
@@ -1,6 +1,13 @@
-<mvc:View controllerName="it.aupsup.purchords.controller.Worklist"
-	xmlns:mvc="sap.ui.core.mvc" xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" xmlns:table="sap.ui.table"
-	xmlns:core="sap.ui.core" xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form"  xmlns:fb="sap.ui.comp.filterbar">
+<mvc:View controllerName="it.aupsup.purchords.controller.Worklist" 
+	xmlns:mvc="sap.ui.core.mvc" 
+	xmlns="sap.uxap" 
+	xmlns:layout="sap.ui.layout" 
+	xmlns:m="sap.m" 
+	xmlns:table="sap.ui.table" 
+	xmlns:core="sap.ui.core" 
+	xmlns:personal="sap.uxap.sample.SharedBlocks.personal" 
+	xmlns:form="sap.ui.layout.form" 
+	xmlns:fb="sap.ui.comp.filterbar">
 	<m:Shell id="shell" appWidthLimited="false">
 		<m:App id="app">
 			<m:pages>
@@ -27,8 +34,7 @@
 										</fb:FilterItem>
 										<fb:FilterItem name="Metasupplier" label="{i18n>METASUP}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier"
-													items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }" >
+												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier" items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }">
 													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
@@ -45,97 +51,65 @@
 										</fb:FilterItem>
 										<fb:FilterItem name="Lifnr" label="{i18n>supplier}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
-												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true"
-													items="{ path: 'lifnrJSONModel>/', sorter: { path: 'LIFNR' } }" >
+												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true" items="{ path: 'lifnrJSONModel>/', sorter: { path: 'LIFNR' } }">
 													<core:ListItem key="{lifnrJSONModel>LIFNR}" text="{lifnrJSONModel>DESCR}" additionalText="{lifnrJSONModel>LIFNR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Matnr" label="{i18n>MATNR}">
 											<fb:control>
-												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr"
-													class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
+												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr" class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Ekorg" label="{i18n>purchaseOrganization}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekorg}"
-													items="{ path: 'PurchaseOrganizationJSONModel>/results', sorter: { path: 'PURCH_ORG' } }">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekorg}" items="{ path: 'PurchaseOrganizationJSONModel>/results', sorter: { path: 'PURCH_ORG' } }">
 													<core:Item key="{PurchaseOrganizationJSONModel>PURCH_ORG}" text="{PurchaseOrganizationJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="GrAcq" label="{i18n>EKGRP}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekgrp}" items="{ path: 'PurchaseGroupJSONModel>/results', sorter: { path: 'CODE' } }"
-													showSecondaryValues="true">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekgrp}" items="{ path: 'PurchaseGroupJSONModel>/results', sorter: { path: 'CODE' } }" showSecondaryValues="true">
 													<core:ListItem key="{PurchaseGroupJSONModel>CODE}" text="{PurchaseGroupJSONModel>DESCR}" additionalText="{PurchaseGroupJSONModel>CODE}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
 										<fb:FilterItem name="Plant" label="{i18n>WERKS}">
 											<fb:control>
-												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/werks}" visible="true"
-													items="{ path: 'PlantsJSONModel>/results', sorter: { path: 'EWERK' } }" showSecondaryValues="true">
+												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/werks}" visible="true" items="{ path: 'PlantsJSONModel>/results', sorter: { path: 'EWERK' } }" showSecondaryValues="true">
 													<core:ListItem key="{PlantsJSONModel>EWERK}" text="{PlantsJSONModel>DESCR}" additionalText="{PlantsJSONModel>EWERK}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
+										<fb:FilterItem name="RangeDateEketEkeh" label="{i18n>RangeDateEketEkeh}">
+											<fb:control>
+												<m:DateRangeSelection dateValue="{path:'filterOrdersJSONModel>/eindtFrom'}" valueFormat="YYYYMMdd" displayFormat="dd MMM yyyy" secondDateValue="{path:'filterOrdersJSONModel>/eindtTo'}"/>
+											</fb:control>
+										</fb:FilterItem>
 									</fb:filterItems>
-									<fb:filterGroupItems>
-										<fb:FilterGroupItem groupName="GSupplier" groupTitle="Supplier" name="S1" label="TBD" visible="{VisibilityJSONModel>/isSupplier}">
-											<fb:control>
-												<m:Input type="Text"/>
-											</fb:control>
-										</fb:FilterGroupItem>
-										<fb:FilterGroupItem groupName="GSupplier" groupTitle="Supplier" name="S2" label="TBD" visible="{VisibilityJSONModel>/isSupplier}">
-											<fb:control>
-												<m:Input type="Text"/>
-											</fb:control>
-										</fb:FilterGroupItem>
-										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B1" label="Suppliers" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
-											<fb:control>
-												<m:MultiComboBox >
-													<m:items>
-														<core:Item key="001" text="Bizerba"/>
-														<core:Item key="002" text="Caterpillar"/>
-														<core:Item key="003" text="Bho"/>
-													</m:items>
-												</m:MultiComboBox>
-											</fb:control>
-										</fb:FilterGroupItem>
-										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B2" label="Sales Organizations" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
-											<fb:control>
-												<m:Input type="Text"/>
-											</fb:control>
-										</fb:FilterGroupItem>
-									</fb:filterGroupItems>
+
 								</fb:FilterBar>
 							</headerContent>
 							<sections>
 								<ObjectPageSection showTitle="false">
 									<subSections>
 										<ObjectPageSubSection >
-											<m:Table id="OrderHeadersTable"
-												items="{ path: 'OrderJSONModel>/results', sorter: { path: 'STATUS_PRIORITY', ascending: true }}"
-												itemPress="onRowSelectionChange" growing="true" growingThreshold="50" growingScrollToLoad="false">
+											<m:Table id="OrderHeadersTable" items="{ path: 'OrderJSONModel>/results', sorter: { path: 'STATUS_PRIORITY', ascending: true }}" itemPress="onRowSelectionChange" growing="true" growingThreshold="50" growingScrollToLoad="false">
 												<m:headerToolbar>
 													<m:OverflowToolbar>
 														<m:content>
 															<m:Title text="{i18n>title}" level="H2"/>
 															<m:Title text="{= ${OrderJSONModel>/results}.length}" level="H2"/>
 															<m:ToolbarSpacer/>
-															<m:Button visible="false" id="headerFilterButton" tooltip="{i18n>clearFilter}" icon="sap-icon://clear-filter" press="onClearFilter"
-																type="Transparent"/>
+															<m:Button visible="false" id="headerFilterButton" tooltip="{i18n>clearFilter}" icon="sap-icon://clear-filter" press="onClearFilter" type="Transparent"/>
 															<m:HBox alignItems="Center" id="comboProfiliConferma">
 																<m:Label text="{i18n>CAT_CONS}" class="labelSpace"/>
-																<m:ComboBox selectedKey="{ListProfiliConfermaJSONModel>/CAT_CONFERMA}" width="auto" change="onChangeProfiloConsegna"
-																	items="{ path: 'ListProfiliConfermaJSONModel>/results', sorter: { path: 'CAT_CONFERMA' } }">
-																	<core:Item key="{ListProfiliConfermaJSONModel>CAT_CONFERMA}"
-																		text="{ListProfiliConfermaJSONModel>CAT_CONFERMA} - {ListProfiliConfermaJSONModel>DESCRIZIONE}"/>
+																<m:ComboBox selectedKey="{ListProfiliConfermaJSONModel>/CAT_CONFERMA}" width="auto" change="onChangeProfiloConsegna" items="{ path: 'ListProfiliConfermaJSONModel>/results', sorter: { path: 'CAT_CONFERMA' } }">
+																	<core:Item key="{ListProfiliConfermaJSONModel>CAT_CONFERMA}" text="{ListProfiliConfermaJSONModel>CAT_CONFERMA} - {ListProfiliConfermaJSONModel>DESCRIZIONE}"/>
 																</m:ComboBox>
-															</m:HBox>								
-															<m:Button icon="sap-icon://legend" press="onLegend" tooltip="{i18n>Legend}"/>							
+															</m:HBox>
+															<m:Button icon="sap-icon://legend" press="onLegend" tooltip="{i18n>Legend}"/>
 															<m:Button icon="sap-icon://excel-attachment" press="onExport" tooltip="{i18n>Export_Excel}"/>
 															<m:Button icon="sap-icon://vertical-grip" visible="true" press="onColumnSelection" tooltip="{i18n>personalization}"/>
 														</m:content>
@@ -159,7 +133,7 @@
 													</m:Column>
 													<m:Column id="PLANT_DESCR" visible="{columnVisibilityModel>/PLANT_DESCR}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>PLANT_DESCR}" class="columnLabelStyle" wrapping="true"/>
-													</m:Column>													
+													</m:Column>
 													<m:Column id="MATNR" visible="{columnVisibilityModel>/MATNR}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>MATNR}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
@@ -177,6 +151,9 @@
 													</m:Column>
 													<m:Column id="WAERS" visible="{columnVisibilityModel>/WAERS}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>WAERS}" class="columnLabelStyle" wrapping="true"/>
+													</m:Column>
+													<m:Column id="EKET_EKEH_EINDT" visible="{columnVisibilityModel>/EKET_EKEH_EINDT}" minScreenWidth="Desktop" demandPopin="true">
+														<m:Label text="{i18n>RangeDateEketEkeh}" class="columnLabelStyle" wrapping="true"/>
 													</m:Column>
 													<m:Column id="PRIMO_PERIODO" visible="{columnVisibilityModel>/PRIMO_PERIODO}" minScreenWidth="Desktop" demandPopin="true">
 														<m:Label text="{i18n>PRIMO_PERIODO}" class="columnLabelStyle" wrapping="true"/>
@@ -197,13 +174,14 @@
 															<m:Text text="{OrderJSONModel>EBELP}"/>
 															<m:Text text="{path : 'OrderJSONModel>LIFNR', formatter : '.removeZeroBefore'}"/>
 															<m:Text text="{OrderJSONModel>NAME1}"/>
-															<m:Text text="{OrderJSONModel>WERKS} / {OrderJSONModel>PLANT_DESCR}"/>															
+															<m:Text text="{OrderJSONModel>WERKS} / {OrderJSONModel>PLANT_DESCR}"/>
 															<m:Text text="{path : 'OrderJSONModel>MATNR', formatter : '.removeZeroBefore'}"/>
 															<m:Text text="{OrderJSONModel>TXZ01}"/>
 															<m:Text text="{OrderJSONModel>IDNLF}"/>
 															<m:Text text="{path : 'OrderJSONModel>MENGE', formatter : '.importFormatter'}"/>
 															<m:Text text="{OrderJSONModel>MEINS}"/>
 															<m:Text text="{OrderJSONModel>WAERS}"/>
+															<m:Text text="{ path: 'OrderJSONModel>EKET_EKEH_EINDT', type: 'it.aupsup.purchords.type.Date' }"/>
 															<m:Text text="{path : 'OrderJSONModel>PRIMO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
