--- a/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_INBOUNDDELIV/webapp/view/Worklist.view.xml
@@ -175,7 +175,7 @@
 													</m:Column>
 												</m:columns>
 												<m:items>
-													<m:ColumnListItem type="Navigation" highlight="{path:'InboundDelJSONModel>Status'}">
+													<m:ColumnListItem type="Navigation" highlight="{path:'InboundDelJSONModel>Status'}" visible = "{= ${InboundDelJSONModel>MENGE} !== '0.000'}">
 														<m:cells>
 															<m:Text text="{InboundDelJSONModel>EBELN}"/>
 															<m:Text text="{InboundDelJSONModel>EBELP}"/>
